fix: align mobile nav menu flush with right edge of screen

--- a/src/app/components/navigation/navigation.scss
+++ b/src/app/components/navigation/navigation.scss
@@ -115,7 +115,7 @@
   &.mobile {
     position: absolute;
     top: 100%;
-    right: var(--space-md);
+    right: 0;
     left: auto;
     width: 200px;
     background: rgba(10, 10, 10, 0.98);
